<li>Guard QList::last().</li>
<li>Guard QList::removeAt().</li>
<li>Notify the user of URL import statistics.</li>
<li>Perform a database transaction before attempting to insert shared URLs. If the particular database driver does not support transactions, insert failures may create incomplete entries in the spot_on_keywords tables. If the imported URL cannot have all of its keywords stored and if the specified database does not support transactions, the particular import will be considered successful.</li>
<li>Prompt before accessing a remote URL.</li>
<li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
<li>Updated NTRU files (05/14/2015).</li>
</ol>
0.22 (04/29/2015)
<ol>
<li>Added Documentation/Spot-On-Kernel.1.</li>
<li>Added the option 65536 to the File Encryption's Read Size.</li>
<li>Allow modification of StarBeam pulse sizes.</li>
<li>Automatically verify StarBeams. Please see the Options panel.</li>
<li>Corrected QSqlQuery preparation. QSqlQuery::exec() must not be used to prepare SQL statements. (spoton_listener::slotNewConnection(), spoton_misc::savePublishedNeighbo())</li>
<li>Corrected Qt DLLs in the Windows bundle.</li>
<li>Corrected inspection of QSqlQuery::exec() errors in various locations.</li>
<li>Corrected server-side processing of UDP datagrams.</li>
<li>Corrected spoton_misc::prepareUrlDistillersDatabase() and spoton_misc::prepareUrlKeysDatabase() with respect to the ok variables.</li>
<li>Improved error messages in the UI.</li>
<li>Include a file's digest within each StarBeam pulse.</li>
<li>Issue QThread::wait() after QThread::quit().</li>
<li>On Qt 5.x and Windows, assume a fusion style.</li>
<li>QWidget::activateWindow() should only be used on Windows!</li>
<li>Updated SQLite to version 3.8.9, Windows.</li>
</ol>

Archived Contents
<br><br>
https://github.com/textbrowser/spot-on/blob/master/branches/Documentation/RELEASE-NOTES.archived
</html>