@@ -3825,7 +3825,7 @@ QPushButton:pressed {
                     <number>1024</number>
                    </property>
                    <property name="maximum">
-                    <number>65536</number>
+                    <number>999999999</number>
                    </property>
                    <property name="value">
                     <number>15000</number>
@@ -7725,7 +7725,7 @@ QPushButton:pressed {
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>683</width>
+                     <width>709</width>
                      <height>245</height>
                     </rect>
                    </property>
